--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ of disease persistence.
 SQL and C++. I am skilled at sophisticated data visualization, and at communicating complex ideas
 to individuals from a range of backgrounds. I also enjoy mentoring and teaching probability,
 statistics, and scientific programming to natural sciences students. 
+
+        <h2>Status</h2>
+<p> I am currently a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
 		  <div class="content_imagetext">
 		    <div class="content_image">
 		      <img src="images/image1.jpg" alt="image1"/>
