Added image of water...

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
      <div id="includeNav"></div>
 	<div id="site_content">		
-          <img width="940" height="300" src="images/home_1.jpg" alt="Christian Gunning, Ph.D." />
+          <img width="940" height="300" src="images/fotogrph-water-ripples-566243154.jpg" alt="Christian Gunning, Ph.D." />
     <!--
       <div class="slideshow">
 	    <ul class="slideshow">
