--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	
      <div id="includeNav"></div>
 	<div id="site_content">		
-          <img width="940" height="300" src="images/fotogrph-water-ripples-566243154.jpg" alt="Christian Gunning, Ph.D." />
+          <img height="220" src="images/fotogrph-water-ripples-566243154-crop.jpg" alt="Christian Gunning, Ph.D." />
     <!--
       <div class="slideshow">
 	    <ul class="slideshow">
@@ -61,7 +61,7 @@ statistics, and scientific programming to natural sciences students.
 <p> I am currently a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
 		  <div class="content_imagetext">
 		    <div class="content_image">
-		      <img src="images/image1.jpg" alt="image1"/>
+		      <img src="images/fotogrph-water-ripples-566243154-crop2.jpg" alt="image1"/>
 	        </div>
 		  </div><!--close content_imagetext-->		  
 		</div><!--close content_item-->
