Cleaned up a bit, filled out pages.

--- a/pubs.html
+++ b/pubs.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- from http://www.opendesigns.org/design/html5-buildings/ -->
-  <title>Christian E. Gunning, Ph.D. | University of New Mexico</title>
+  <title>Christian E. Gunning, Ph.D. | University of New Mexico | Publications </title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="Disease Ecology, Discrete, Stochastic, Dynamical Systems, R programming language" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -36,20 +36,11 @@
 	
 	  <div id="content">
         <div class="content_item">
-        <h2>Overview</h2>
-        <p>My research employs a dynamical systems interpretation of population and community ecology, with an emphasis on time series analysis and simulation of discrete stochastic dynamical systems.
-I am currently studying the metapopulation dynamics of measles and whooping cough. In particular,
-I am exploring the effect of population size on stochastic extinction as a metapopulation measure
-of disease persistence.
-        
-        <h2>Skill set</h2>
-<p>My mathematical skill set includes probability theory, machine learning methods, linear modeling, and bootstrapping. I am fluent in the R programming language, and have extensive experience in
-SQL and C++. I am skilled at sophisticated data visualization, and at communicating complex ideas
-to individuals from a range of backgrounds. I also enjoy mentoring and teaching probability,
-statistics, and scientific programming to natural sciences students. 
+<h2> Publications </h2>
 
-        <h2>Status</h2>
-<p> I am currently a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
+<h4> For an up-to-date list, please see my <a href="http://scholar.google.com/citations?user=y355pzMAAAAJ&hl=en">Google Scholar</a> profile.</h4>
+
+
 		  <div class="content_imagetext">
 		    <div class="content_image">
 		      <img src="images/fotogrph-water-ripples-566243154-crop2.jpg" alt="image1"/>
