Wrote research page.

--- a/research.html
+++ b/research.html
@@ -36,7 +36,61 @@
 	
 	  <div id="content">
         <div class="content_item">
-        <h2>Under Construction</h2>
+
+<h2>Interdisciplinary Research</h2>
+<p>My research is informed by interdisciplinary study and collaborations. 
+Collaboration with scientists in other
+fields allows me to bring "fresh eyes" to my own and other researchers' problems, and often presents
+novel and elegant solutions to known problems.
+Similarly,  outstanding problems in one field can sometimes employ existing solutions
+in seemingly unrelated but analogous systems.  Additionally, an appreciation for the breadth of
+modern scientific pursuit provides a clearer picture of what the state-of-the-art in analytical and
+computational tools.   
+
+<h2>Population and Disease Ecology</h2>
+<p>I am, first and foremost, an empirical population ecologist.  
+My research involves identifying the causal mechanisms that produce the observable temporal dynamics of real-world populations.
+My specialization in disease ecology resulted from two main factors. First, the availability of rich
+empirical datasets allows me to
+test complex hypotheses. Second,  the extensive theoretical literature within disease ecology has allowed me
+to "stand on the shoulders" of such intellectual giants as Roy Anderson and Robert May without reinventing the wheel.  
+In essence, my research program has been shaped by asking "what's next?" - what key ecological questions remain unaddressed, and 
+how can available datasets answer these questions?  
+My recent work focuses on two areas of disease ecology that I feel warrant closer attention.
+
+<p>First, I'm exploring the interaction between 
+the discrete nature of individuals and the stochastic nature on life history events.  
+Extinctions due to demographic stochasticity have received considerable attention 
+in epidemic human diseases like measles, where the the influence of population size
+led to the concept of "critical community size".  My work matches probabilistic mechanistic 
+models with empirically observed patterns of stochastic extinction in populations and
+metapopulations.  In addition, I have tested existing theory in novel metapopulations, such as 
+modern developing nations.
+
+<p>Second, I'm exploring 
+the complex interactions between population and metapopulation processes.
+Population dynamics arise both from local processes (e.g., birth and death) and
+metapopulation processes (e.g., migration). Local processes are often well-sampled,
+while low-frequency metapopulation processes are difficult to directly observe.  
+In addition, observation process variability can complicate comparisons between populations and 
+metapopulations.  I seek to disentangle "local" and "global" processes, and to reveal complex 
+feedbacks between hierarchical levels. To achieve these ends, I use statistical and mathematical
+models paired with spatially and temporally extensive datasets from a range of metapopulations.
+
+<h2>Research Tools</h2>
+<p>High quality tools are critical for high quality research;  good tools make simple tasks easy and
+hard tasks possible.  In addition, using open source tools and 
+reproducible research methods allows me to quickly and easily share my work with others.  To these ends, I use the
+following tools: 
+</ul>
+<li>R is my primary programming language.  Primary uses include rapid development, statistical analysis, and figure generation.  
+<li>C++ is my programming language of choice for computationally intensive analysis.  
+<li>Postgresql is the open source database engine that I use for "Big Data" projects such as the use
+of IPUMS census microdata.
+<li>Git is the revision control system that I use to store and share code.
+<li>knitr is my primary document preparation framework, allowing data to be dynamically embedded in
+manuscripts.
+
 
 		  <div class="content_imagetext">
 		    <div class="content_image">
