--- a/research.html
+++ b/research.html
@@ -91,6 +91,8 @@ of IPUMS census microdata.
 <li>knitr is my primary document preparation framework, allowing data to be dynamically embedded in
 manuscripts.
 
+By actively contributing to the R community, I continue to develop my analytical and programming skills, while gaining valuable experience in 
+novel computational methods. 
 
 		  <div class="content_imagetext">
 		    <div class="content_image">
