--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@ of IPUMS census microdata.
 <li>knitr is my primary document preparation framework, allowing data to be dynamically embedded in
 manuscripts.
 
-By actively contributing to the R community, I continue to develop my analytical and programming skills, while gaining valuable experience in 
+I also actively contributing to the R community (.e.g via my <a href="http://helmingstay.blogspot.com/search/label/R">R blog</a>, also published on <a href="http://r-bloggers.com">R-bloggers</a>).  This allows me to hone my analytical and programming skills, while gaining valuable experience in 
 novel computational methods. 
 
 		  <div class="content_imagetext">
