--- a/teaching.html
+++ b/teaching.html
@@ -37,6 +37,9 @@
 	  <div id="content">
         <div class="content_item">
 <h2> Teaching </h2>
+I enjoy teaching mathematics, probability, and programming to natural science students.
+When possible, I prefer an example-driven, hands-on approach.
+
 <h4> University of New Mexico </h4>
 
  <div class="teaching">
@@ -59,11 +62,6 @@
     </table>
 	        </div>
 
-		  <div class="content_imagetext">
-		    <div class="content_image">
-		      <img src="images/fotogrph-water-ripples-566243154-crop2.jpg" alt="image1"/>
-	        </div>
-		  </div><!--close content_imagetext-->		  
 		</div><!--close content_item-->
       </div><!--close content-->   
 	</div><!--close site_content-->  	
