Minor updates - news, a typo.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ to individuals from a range of backgrounds. I also enjoy mentoring and teaching 
 statistics, and scientific programming to natural sciences students. 
 
         <h2>Status</h2>
-<p> I am currently a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
+<p> I am currently a post-doctoral fellow at North Carolina State University working with Fred Gould and Alun Lloyd on <i>Aedes aegypti</i> population simulations.
+<p> I was previously a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
 		</div><!--close content_item-->
       </div><!--close content-->   
 	</div><!--close site_content-->  	
