--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,8 @@
 I enjoy teaching mathematics, probability, and programming to natural science students.
 When possible, I prefer an example-driven, hands-on approach.
 
-<h4> University of New Mexico </h4>
+<br><br>
+<h4> Recent Courses: University of New Mexico </h4>
 
  <div class="teaching">
  <table style="width:80%">
