--- a/teaching.html
+++ b/teaching.html
@@ -41,23 +41,28 @@ I enjoy teaching mathematics, probability, and programming to natural science st
 When possible, I prefer an example-driven, hands-on approach.
 
 <br><br>
-<h4> Recent Courses: University of New Mexico </h4>
+<h4> Recent Courses</h4>
+<h4>University of New Mexico (Gr=Graduate, U=Undergraduate)</h4>
 
  <div class="teaching">
  <table style="width:80%">
     <tr>
     <td> Spring 2014 </td>
-    <td> <a href="teaching/2014-spring-BioNonMaj.html">Biology for Non-Majors</a> </td>
+    <td> <a href="teaching/2014-spring-BioNonMaj.html">Biology for Non-Majors (U)</a> </td>
     <td> Instructor</td>
     </tr>
     <tr>
     <td> Fall 2013 </td>
-    <td>     <a href="http://probforsci.blogspot.com/">Probability for Scientists</a> </td>
+    <td>     <a href="http://probforsci.blogspot.com/">Probability for Scientists (U/Gr)</a> </td>
         <td> Lead Instructor</td>
+    </tr>
+    <td> Spring 2013 </td>
+    <td>     <a href="http://statacumen.com/teaching/sc1/">Statistical Computing (Gr)</a> </td>
+        <td> Teaching Assistant, Guest Lecturer</td>
     </tr>
     <tr>
     <td>  Fall 2010 - Spring 2013 </td>
-     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group</a> </td>
+     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
         <td> Organizer / Facilitator</td>
     </tr>
     </table>
