--- a/teaching.html
+++ b/teaching.html
@@ -38,12 +38,15 @@
         <div class="content_item">
 <h2> Teaching </h2>
 I enjoy teaching mathematics, probability, and programming to natural science students.
-When possible, I prefer an example-driven, hands-on approach.
+When possible, I prefer an example-driven, hands-on approach. 
+
+I also enjoy mentoring highly motivated students on projects related to time series, data analysis and 
+visualization, and R.
 
 <br><br>
 <h4> Recent Courses</h4>
-<h4>University of New Mexico (Gr=Graduate, U=Undergraduate)</h4>
-
+<h4>University of New Mexico </h4>
+<h5>(Gr=Graduate, U=Undergraduate)</h5>
  <div class="teaching">
  <table style="width:80%">
     <tr>
@@ -65,12 +68,29 @@ When possible, I prefer an example-driven, hands-on approach.
      <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
         <td> Organizer / Facilitator</td>
     </tr>
-    </table>
-	        </div>
+</table>
+</div>
 
-		</div><!--close content_item-->
-      </div><!--close content-->   
+<h4>Workshops and Working Groups</h4>
+ <div class="teaching">
+ <table style="width:80%">
+    <tr>
+    <td> Spring 2012 </td>
+    <td> <a href="http://eeidconference.org/EEID2012/index.php?nav=workshops">EEID Ecological Modeling Workshop</a> </td>
+    <td> Teaching Assistant</td>
+    </tr>
+    <td>  Fall 2010 - Spring 2013 </td>
+     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
+        <td> Organizer / Facilitator</td>
+    </tr>
+</table>
+</div>
+
+    </div><!--close content_item-->
+  </div><!--close content-->   
 	</div><!--close site_content-->  	
+
+ 
   
      <div id="includeFoot"></div>
   </div><!--close main-->
