--- a/teaching.html
+++ b/teaching.html
@@ -80,7 +80,7 @@ visualization, and R.
     <td> Teaching Assistant</td>
     </tr>
     <td>  Fall 2010 - Spring 2013 </td>
-     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
+     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group</a> </td>
         <td> Organizer / Facilitator</td>
     </tr>
 </table>
