--- a/index.html
+++ b/index.html
@@ -37,20 +37,31 @@
 	  <div id="content">
         <div class="content_item">
         <h2>Overview</h2>
-        <p>My research employs a dynamical systems interpretation of population and community ecology, with an emphasis on time series analysis and simulation of discrete stochastic dynamical systems.
-I am currently studying the metapopulation dynamics of measles and whooping cough. In particular,
-I am exploring the effect of population size on stochastic extinction as a metapopulation measure
-of disease persistence.
-        
-        <h2>Skill set</h2>
-<p>My mathematical skill set includes probability theory, machine learning methods, linear modeling, and bootstrapping. I am fluent in the R programming language, and have extensive experience in
-SQL and C++. I am skilled at sophisticated data visualization, and at communicating complex ideas
-to individuals from a range of backgrounds. I also enjoy mentoring and teaching probability,
-statistics, and scientific programming to natural sciences students. 
+        <p>My research uses dynamical systems theory to explore frontiers in modern population ecology. 
+I employ numerical simulations and time series analysis to quantify metapopulation dynamics in the 
+presence of observation error and dynamical stochasticity.  
 
-        <h2>Status</h2>
-<p> I am currently a post-doctoral fellow at North Carolina State University working with Fred Gould and Alun Lloyd on <i>Aedes aegypti</i> population simulations.
-<p> I was previously a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.  I defended my Ph.D. in May 2014.
+My PhD work focused on the metapopulation dynamics of measles and whooping cough, where 
+I explored the effect of population size on stochastic extinction as a metapopulation measure
+of disease persistence. My current work at NCSU uses individual-based models to quantify the
+effect of control measures on mosquito population dynamics. 
+        
+<h2>Skill set</h2>
+<p>My mathematical skill set includes probability theory, machine learning methods, 
+generalize linear modeling, and bootstrapping. 
+I am fluent in the R, C++, and SQL programming languages, with a strong background in
+numerical and stochastic programming and multi-dimensional data visualization.
+I also have extensive experience in time series analysis and vector-based GIS.
+
+<h2>Teaching</h2>
+My teaching and mentoring focuses on natural sciences students. 
+I employ a hands-on, problem-driven approach to teaching probability,
+statistics, and scientific programming. Throughout my teaching, I advocate the
+advantages of literate programming and reproductible research.
+
+<h2>Status</h2>
+<p> I am currently a post-doctoral fellow at North Carolina State University working with Fred Gould and Alun Lloyd on <i>Aedes aegypti</i> population simulations. I physically reside in Missoula, MT.
+<p> I was previously a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.
 		</div><!--close content_item-->
       </div><!--close content-->   
 	</div><!--close site_content-->  	
