--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
 I employ numerical simulations and time series analysis to quantify metapopulation dynamics in the 
 presence of observation error and dynamical stochasticity.  
 
-My PhD work focused on the metapopulation dynamics of measles and whooping cough, where 
-I explored the effect of population size on stochastic extinction as a metapopulation measure
-of disease persistence. My current work at NCSU uses individual-based models to quantify the
-effect of control measures on mosquito population dynamics. 
+My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr.  Helen Wearing</a> at the 
+<a href="https://biology.unm.edu">University of New Mexico</a>.  
+I studied the metapopulation dynamics
+of measles and whooping cough, including the effect
+of population size on stochastic extinction and
+disease persistence. My current work at NCSU uses
+individual-based models to quantify the effect of
+control measures on mosquito population dynamics. 
         
 <h2>Skill set</h2>
 <p>My mathematical skill set includes probability theory, machine learning methods, 
@@ -54,14 +58,13 @@ numerical and stochastic programming and multi-dimensional data visualization.
 I also have extensive experience in time series analysis and vector-based GIS.
 
 <h2>Teaching</h2>
-My teaching and mentoring focuses on natural sciences students. 
+<p>My teaching and mentoring focuses on natural sciences students. 
 I employ a hands-on, problem-driven approach to teaching probability,
 statistics, and scientific programming. Throughout my teaching, I advocate the
 advantages of literate programming and reproductible research.
 
-<h2>Status</h2>
+<h2>Current Status</h2>
 <p> I am currently a post-doctoral fellow at North Carolina State University working with Fred Gould and Alun Lloyd on <i>Aedes aegypti</i> population simulations. I physically reside in Missoula, MT.
-<p> I was previously a research assistant in the Wearing Research Group at the University of New Mexico's Department of Biology.
 		</div><!--close content_item-->
       </div><!--close content-->   
 	</div><!--close site_content-->  	
