Add missing para break

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 I employ numerical simulations and time series analysis to quantify metapopulation dynamics in the 
 presence of observation error and dynamical stochasticity.  
 
-My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr.  Helen Wearing</a> at the 
+<p>My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr.  Helen Wearing</a> at the 
 <a href="https://biology.unm.edu">University of New Mexico</a>.  
 I studied the metapopulation dynamics
 of measles and whooping cough, including the effect
