Add links, rework navbar, minor edits to index overview

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- from http://www.opendesigns.org/design/html5-buildings/ -->
-  <title>Christian E. Gunning, Ph.D. | University of New Mexico</title>
+  <title>Christian E. Gunning, Ph.D.</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="Disease Ecology, Discrete, Stochastic, Dynamical Systems, R programming language" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
@@ -37,9 +37,16 @@
 	  <div id="content">
         <div class="content_item">
         <h2>Overview</h2>
-        <p>My research uses dynamical systems theory to explore frontiers in modern population ecology. 
-I employ numerical simulations and time series analysis to quantify metapopulation dynamics in the 
-presence of observation error and dynamical stochasticity.  
+        <p>My research uses dynamical systems theory to explore frontiers in modern ecology. 
+I employ numerical simulations, statistical models, and time series analysis to quantify 
+population and metapopulation dynamics in the presence of process noise and 
+observational uncertainty.
+
+<p>I am currently a post-doc at 
+<a href="https://projects.ncsu.edu/cals/entomology/">NCSU Entomology</a>, working 
+with <a href="https://projects.ncsu.edu/cals/entomology/Gould">Fred Gould</a> 
+and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> on <i>Aedes aegypti</i> 
+population dynamics in Iquitos, Peru.
 
 <p>My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr.  Helen Wearing</a> at the 
 <a href="https://biology.unm.edu">University of New Mexico</a>.  
@@ -63,8 +70,6 @@ I employ a hands-on, problem-driven approach to teaching probability,
 statistics, and scientific programming. Throughout my teaching, I advocate the
 advantages of literate programming and reproductible research.
 
-<h2>Current Status</h2>
-<p> I am currently a post-doctoral fellow at North Carolina State University working with Fred Gould and Alun Lloyd on <i>Aedes aegypti</i> population simulations. I physically reside in Missoula, MT.
 		</div><!--close content_item-->
       </div><!--close content-->   
 	</div><!--close site_content-->  	
