Change links formatting, footer

--- a/links.html
+++ b/links.html
@@ -29,12 +29,10 @@
         <div class="content_item">
 
 <h2>Links</h2>
-<ul>
-  <li><a href="https://helmingstay.blogspot.com/">Blog</a></li>
-  <li><a href="https://twitter.com/prosopis">Twitter</a></li>
-  <li><a href="https://github.com/helmingstay/">Github</a></li>
-  <li><a href="https://keybase.io/xian">Keybase Page</a></li>
-</ul>
+  <h3>Blog:</h3> <a href="https://helmingstay.blogspot.com/">Life in Code</a>
+  <h3>Twitter:</h3><a href="https://twitter.com/prosopis">@prosopis</a>
+  <h3>Github:</h3><a href="https://github.com/helmingstay/">helmingstay</a>
+  <h3>Keybase:</h3><a href="https://keybase.io/xian">Page</a>xian</a>
     
 
     </div><!--close content_item-->
