--- a/links.html
+++ b/links.html
@@ -29,10 +29,12 @@
         <div class="content_item">
 
 <h2>Links</h2>
-  <h3>Blog:</h3> <a href="https://helmingstay.blogspot.com/">Life in Code</a>
-  <h3>Twitter:</h3><a href="https://twitter.com/prosopis">@prosopis</a>
-  <h3>Github:</h3><a href="https://github.com/helmingstay/">helmingstay</a>
-  <h3>Keybase:</h3><a href="https://keybase.io/xian">Page</a>xian</a>
+<ul>
+  <li>Blog: <a href="https://helmingstay.blogspot.com/">Life in Code</a></li>
+  <li>Twitter: <a href="https://twitter.com/prosopis">@prosopis</a></li>
+  <li>Github: <a href="https://github.com/helmingstay/">helmingstay</a></li>
+  <li>Keybase: <a href="https://keybase.io/xian">xian</a></li>
+</ul>
     
 
     </div><!--close content_item-->
