--- a/links.html
+++ b/links.html
@@ -41,7 +41,7 @@
 <ul>
   <li><a href="http://math.unm.edu/~hwearing/researchgroup/index.html">The Wearing Group</a> @UNM</li>
   <li><a href="http://statacumen.com/about/">Erik B. Erhardt</a> @UNM</li>
-  <li><a href="http://alun.math.ncsu.edu/">Alun Lloyd @NCSU</a></li>
+  <li><a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> @NCSU</li>
 </ul>
     
 <h2>Other Projects</h2>
