--- a/index.html
+++ b/index.html
@@ -22,15 +22,7 @@
 	
     <div id="includeNav"></div>
 	<div id="site_content">		
-          <img height="220" src="images/fotogrph-water-ripples-566243154-crop.jpg" alt="Christian Gunning, Ph.D." />
-    <!--
-      <div class="slideshow">
-	    <ul class="slideshow">
-          <li class="show"><img width="940" height="300" src="images/home_1.jpg" alt="Christian Gunning, Ph.D." /></li>
-          <li><img width="940" height="300" src="images/home_2.jpg" alt="&quot;Enter your caption here&quot;" /></li> 
-        </ul> 
-	  </div>
-    -->	
+          <img height="220" src="images/fotogrph-water-ripples-566243154-crop.jpg" alt="Christian E. Gunning, Ph.D." />
 	
      <div id="includeSidebar"></div>
 	
@@ -38,31 +30,32 @@
         <div class="content_item">
         <h2>Overview</h2>
         <p>My research uses dynamical systems theory to explore frontiers in modern ecology. 
-I employ numerical simulations, statistical models, and time series analysis to quantify 
+I employ numerical simulations, statistical models, and spectral time series analysis to quantify 
 population and metapopulation dynamics in the presence of process noise and 
 observational uncertainty.
 
-<p>I am currently a post-doc at 
-<a href="https://projects.ncsu.edu/cals/entomology/">NCSU Entomology</a>, working 
+<p>I am currently a Visiting Assistant Professor of Biology at <a href="www.kenyon.edu/academics">Kenyon College</a>, where I teach classes in <a href="www.kenyon.edu/academics/departments-programs/biology/">Biology</a> and <a href="www.kenyon.edu/academics/departments-programs/mathematics">Statistics</a>.
+
+I recently completed a post-doc at 
+<a href="https://projects.ncsu.edu/cals/entomology/">NCSU</a> where I worked 
 with <a href="https://projects.ncsu.edu/cals/entomology/Gould">Fred Gould</a> 
 and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> on <i>Aedes aegypti</i> 
-population dynamics in Iquitos, Peru.
+mosquito population dynamics in Iquitos, Peru.  At NCSU, I used
+stastical models and individual-based simulation models to 
+quantify the effect of
+control measures on mosquito population dynamics. 
 
-<p>My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr.  Helen Wearing</a> at the 
+<p>My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr. Helen Wearing</a> at the 
 <a href="https://biology.unm.edu">University of New Mexico</a>.  
 I studied the metapopulation dynamics
 of measles and whooping cough, including the effect
 of population size on stochastic extinction and
-disease persistence. My current work at NCSU uses
-individual-based models to quantify the effect of
-control measures on mosquito population dynamics. 
-        
-<h2>Skill set</h2>
-<p>My mathematical skill set includes probability theory, machine learning methods, 
-generalize linear modeling, and bootstrapping. 
+disease persistence. 
+
+<h2>Computational Tools</h2>
+<p>
 I am fluent in the R, C++, and SQL programming languages, with a strong background in
-numerical and stochastic programming and multi-dimensional data visualization.
-I also have extensive experience in time series analysis and vector-based GIS.
+numerical programming, stochastic processes, and multi-dimensional data visualization.  I have extensive experience in time series analysis and vector-based GIS.
 
 <h2>Teaching</h2>
 <p>My teaching and mentoring focuses on natural sciences students. 
