--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ I employ numerical simulations, statistical models, and spectral time series ana
 population and metapopulation dynamics in the presence of process noise and 
 observational uncertainty.
 
-<p>I am currently a Visiting Assistant Professor of Biology at <a href="www.kenyon.edu/academics">Kenyon College</a>, where I teach classes in <a href="www.kenyon.edu/academics/departments-programs/biology/">Biology</a> and <a href="www.kenyon.edu/academics/departments-programs/mathematics">Statistics</a>.
+<p>I am currently a Visiting Assistant Professor of Biology at <a href="http://www.kenyon.edu/academics">Kenyon College</a>, where I teach classes in <a href="http://www.kenyon.edu/academics/departments-programs/biology/">Biology</a> and <a href="http://www.kenyon.edu/academics/departments-programs/mathematics">Statistics</a>.
 
 I recently completed a post-doc at 
 <a href="https://projects.ncsu.edu/cals/entomology/">NCSU</a> where I worked 
