Update teaching, news. minor links

--- a/teaching.html
+++ b/teaching.html
@@ -36,42 +36,35 @@
 	
 	  <div id="content">
         <div class="content_item">
-<h2> Teaching </h2>
-I enjoy teaching mathematics, probability, and programming to natural science students.
-When possible, I prefer an example-driven, hands-on approach. 
-
-I also enjoy mentoring highly motivated students on projects related to time series, data analysis and 
-visualization, and R.
+<h3>Teaching and Mentoring</h3>
+My goal is to help students and colleagues build strong quantitative skills through active, 
+project-based learning. My teaching and mentoring activities focus on data analysis and visualization, reproducible research methods, and literate programming, with a secondary emphasis on probability and statistics. Specific projects include simulation modeling of dynamical systems, time series analysis, and disease ecology.
 
 <br><br>
-<h4> Recent Courses</h4>
-<h4>University of New Mexico </h4>
-<h5>(Gr=Graduate, U=Undergraduate)</h5>
- <div class="teaching">
- <table style="width:80%">
-    <tr>
-    <td> Spring 2014 </td>
-    <td> <a href="class/2014-spring-unm-intro-bio/2014-spring-BioNonMaj.html">Biology for Non-Majors (U)</a> </td>
-    <td> Instructor</td>
-    </tr>
-    <tr>
-    <td> Fall 2013 </td>
-    <td>     <a href="http://probforsci.blogspot.com/">Probability for Scientists (U/Gr)</a> </td>
-        <td> Lead Instructor</td>
-    </tr>
-    <td> Spring 2013 </td>
-    <td>     <a href="http://statacumen.com/teaching/sc1/">Statistical Computing (Gr)</a> </td>
-        <td> Teaching Assistant, Guest Lecturer</td>
-    </tr>
-    <tr>
-    <td>  Fall 2010 - Spring 2013 </td>
-     <td>    <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
-        <td> Organizer / Facilitator</td>
-    </tr>
-</table>
+<h3>Course Pages</h3>
+(Gr=Graduate, U=Undergraduate)
+ <div class="teaching" style="width:80%">
+<h4>Kenyon College (U)</h4>
+ <ul>
+    <li><a href="https://kenyoncodes.gitlab.io/">KenyonCodes / Intro to Programming</a></li>
+ </ul>
+<h4>Pace University (G)</h4>
+ <ul>
+    <li>Fall 2017: <a href="https://gitlab.com/x14n.teach/bmb620">Quantitative Methods: Data Analysis and Presentation</a> </li>
+</ul>
+<h4>University of New Mexico (U/Gr)</h4>
+ <ul>
+    <li>Spring 2014: <a href="class/2014-spring-unm-intro-bio/2014-spring-BioNonMaj.html">Biology for Non-Majors (U)</a> </li>
+    <li>Fall 2013: <a href="http://probforsci.blogspot.com/">Probability for Scientists (U/Gr)</a> </li>
+    <li>Spring 2013: <a href="http://statacumen.com/teaching/sc1/">Statistical Computing (Gr)</a> </td>
+    <li>Fall 2010 to Spring 2013: <a href="https://code.google.com/p/unm-r-programming/w/list">UNM R Programming Group (U/Gr)</a> </td>
+</ul>
+
 </div>
 
+<!--
 <h4>Workshops and Working Groups</h4>
+ <div class="teaching" style="width:80%">
  <div class="teaching">
  <table style="width:80%">
     <tr>
@@ -85,6 +78,7 @@ visualization, and R.
     </tr>
 </table>
 </div>
+-->
 
     </div><!--close content_item-->
   </div><!--close content-->   
