--- a/index.html
+++ b/index.html
@@ -28,40 +28,7 @@
 	
 	  <div id="content">
         <div class="content_item">
-        <h2>Overview</h2>
-        <p>My research uses dynamical systems theory to explore frontiers in modern ecology. 
-I employ numerical simulations, statistical models, and spectral time series analysis to quantify 
-population and metapopulation dynamics in the presence of process noise and 
-observational uncertainty.
-
-<p>I am currently a Visiting Assistant Professor of Biology at <a href="http://www.kenyon.edu/academics">Kenyon College</a>, where I teach classes in <a href="http://www.kenyon.edu/academics/departments-programs/biology/">Biology</a> and <a href="http://www.kenyon.edu/academics/departments-programs/mathematics">Statistics</a>.
-
-I recently completed a post-doc at 
-<a href="https://projects.ncsu.edu/cals/entomology/">NCSU</a> where I worked 
-with <a href="https://projects.ncsu.edu/cals/entomology/Gould">Fred Gould</a> 
-and <a href="http://alun.math.ncsu.edu/">Alun Lloyd</a> on <i>Aedes aegypti</i> 
-mosquito population dynamics in Iquitos, Peru.  At NCSU, I used
-stastical models and individual-based simulation models to 
-quantify the effect of
-control measures on mosquito population dynamics. 
-
-<p>My PhD work was conducted under <a href="https://biology.unm.edu/core-faculty/wearing.shtml">Dr. Helen Wearing</a> at the 
-<a href="https://biology.unm.edu">University of New Mexico</a>.  
-I studied the metapopulation dynamics
-of measles and whooping cough, including the effect
-of population size on stochastic extinction and
-disease persistence. 
-
-<h2>Computational Tools</h2>
-<p>
-I am fluent in the R, C++, and SQL programming languages, with a strong background in
-numerical programming, stochastic processes, and multi-dimensional data visualization.  I have extensive experience in time series analysis and vector-based GIS.
-
-<h2>Teaching</h2>
-<p>My teaching and mentoring focuses on natural sciences students. 
-I employ a hands-on, problem-driven approach to teaching probability,
-statistics, and scientific programming. Throughout my teaching, I advocate the
-advantages of literate programming and reproductible research.
+<p>As a population and disease ecologist, my research combines dynamical systems theory with empirical observations to explore frontiers in modern ecology.  I employ numerical simulations, statistical models, and data visualizations to elucidate population and metapopulation dynamics in the presence of process noise and observational uncertainty. My primary tools include the R, C++, and SQL programming languages, along with QGIS and PostGis.
 
 		</div><!--close content_item-->
       </div><!--close content-->   
