--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	
 	  <div id="content">
         <div class="content_item">
+<h2>Overview</h2>
 <p>As a population and disease ecologist, my research combines dynamical systems theory with empirical observations to explore frontiers in modern ecology.  I employ numerical simulations, statistical models, and data visualizations to elucidate population and metapopulation dynamics in the presence of process noise and observational uncertainty. My primary tools include the R, C++, and SQL programming languages, along with QGIS and PostGis.
 
 		</div><!--close content_item-->
